Fixed staff on mobile views

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ h2 {
 .staff-name {
     position: absolute;
     bottom: 0px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.35);
     color:white;
     text-align: center;
     font-size:28px;
